--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -130,7 +130,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
             <div class="footer-column links">
                 <h3 class="footer-title">Chính sách</h3>
                 <ul class="footer-link-list">
-                    <li><a href="/about-us">Giới thiệu</a></li>
+                    <li><a href="/about-us">Về chúng tôi</a></li>
                     <li><a href="/contact">Liên hệ</a></li>
                     <li><a href="/privacy-policy">Chính sách bảo mật</a></li>
                     <li><a href="/disclaimer">Miễn trừ trách nhiệm</a></li>
