--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,7 +68,24 @@ const ogImageURL = new URL(ogImage, Astro.site);
       </script>
     )}
     <slot name="head" />
+
+    <style is:global>
+
+      /* Ngăn kéo thả hình ảnh */
+      img {
+        -webkit-user-drag: none;
+        user-drag: none;
+        pointer-events: none;
+      }
+      
+      /* (Tùy chọn) Cho phép copy ở các ô input/textarea để người dùng nhập liệu được */
+      input, textarea {
+        -webkit-user-select: auto;
+        user-select: auto;
+      }
+    </style>
 </head>
+
 <body>
     <div id="stars-bg"></div>
 
@@ -226,6 +243,22 @@ const ogImageURL = new URL(ogImage, Astro.site);
                 }
             });
         });
+    </script>
+    <script>
+      /*document.addEventListener('copy', (event) => {
+          event.preventDefault();
+      });
+      document.addEventListener('contextmenu', (event) => {
+          event.preventDefault();
+      });
+      document.addEventListener('keydown', (event) => {
+          if (event.ctrlKey && event.key === 'c') {
+              event.preventDefault();
+          }
+          if (event.key === 'F12') {
+              event.preventDefault();
+          }
+      });*/
     </script>
 </body>
 </html>
