--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,6 +22,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://phogotarot.com/images/favicon.png">
+    <link rel="apple-touch-icon" href="https://phogotarot.com/images/favicon.png">
 
     <title>{title}</title>
     <meta name="description" content={description} />
